// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateModal matches snapshot when open 1`] = `
<div
  aria-describedby="delegate-modal-description"
  aria-labelledby="delegate-modal-title"
  aria-modal="true"
  className="fixed inset-0 z-50 flex items-start justify-center overflow-y-auto bg-black/40 p-4 sm:items-center sm:p-6 "
  data-testid="delegate-modal"
  role="dialog"
  tabIndex={-1}
>
  <div
    className="w-full max-w-md rounded-2xl bg-white p-6 shadow-xl"
  >
    <h2
      className="mb-1 text-lg font-bold text-gray-900"
      id="delegate-modal-title"
    >
      Delegate Voting Power
    </h2>
    <p
      className="mb-4 text-sm text-gray-500"
      id="delegate-modal-description"
    >
      Delegate to yourself to activate your voting power, or choose another address.
    </p>
    <form
      className="space-y-4"
      onSubmit={[Function]}
    >
      <div
        className="flex items-center justify-between gap-3"
      >
        <span
          className="min-w-0 font-mono text-xs text-gray-500"
        >
          Not connected
        </span>
        <button
          className="rounded-lg border border-gray-200 px-3 py-1.5 text-xs text-gray-700 hover:bg-gray-50 disabled:opacity-50"
          data-testid="delegate-to-self-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate to myself
        </button>
      </div>
      <input
        className="w-full rounded-lg border border-gray-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
        data-testid="delegatee-input"
        onChange={[Function]}
        placeholder="Stellar address (G...)"
        required={true}
        type="text"
        value=""
      />
      <div
        className="flex gap-3"
      >
        <button
          className="flex-1 rounded-lg border border-gray-200 py-2 text-sm text-gray-600 hover:bg-gray-50"
          data-testid="delegate-cancel-button"
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="flex-1 rounded-lg bg-indigo-600 py-2 text-sm font-medium text-white hover:bg-indigo-700 disabled:opacity-50"
          data-testid="delegate-submit-button"
          disabled={false}
          type="submit"
        >
          Delegate
        </button>
      </div>
      <div
        className="mt-4 border-t border-gray-200 pt-4"
      >
        <p
          className="mb-2 text-xs text-gray-500"
        >
          Or delegate without paying gas
        </p>
        <button
          className="w-full rounded-lg bg-green-600 py-2 text-sm font-medium text-white hover:bg-green-700 disabled:opacity-50"
          data-testid="delegate-by-sig-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate without paying gas
        </button>
        <p
          className="mt-1 text-xs text-gray-400"
        >
          Sign off-chain, relayer submits transaction
        </p>
      </div>
    </form>
  </div>
</div>
`;

exports[`DelegateModal matches snapshot when open with prefill address 1`] = `
<div
  aria-describedby="delegate-modal-description"
  aria-labelledby="delegate-modal-title"
  aria-modal="true"
  className="fixed inset-0 z-50 flex items-start justify-center overflow-y-auto bg-black/40 p-4 sm:items-center sm:p-6 "
  data-testid="delegate-modal"
  role="dialog"
  tabIndex={-1}
>
  <div
    className="w-full max-w-md rounded-2xl bg-white p-6 shadow-xl"
  >
    <h2
      className="mb-1 text-lg font-bold text-gray-900"
      id="delegate-modal-title"
    >
      Delegate Voting Power
    </h2>
    <p
      className="mb-4 text-sm text-gray-500"
      id="delegate-modal-description"
    >
      Delegate to yourself to activate your voting power, or choose another address.
    </p>
    <form
      className="space-y-4"
      onSubmit={[Function]}
    >
      <div
        className="flex items-center justify-between gap-3"
      >
        <span
          className="min-w-0 font-mono text-xs text-gray-500"
        >
          Not connected
        </span>
        <button
          className="rounded-lg border border-gray-200 px-3 py-1.5 text-xs text-gray-700 hover:bg-gray-50 disabled:opacity-50"
          data-testid="delegate-to-self-button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate to myself
        </button>
      </div>
      <input
        className="w-full rounded-lg border border-gray-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
        data-testid="delegatee-input"
        onChange={[Function]}
        placeholder="Stellar address (G...)"
        required={true}
        type="text"
        value="GBFUUXATVOGXGD4KS3I423QFZSPE4ZFOQ3TCJVWFUYSIPULXIRVRE2DT"
      />
      <div
        className="flex gap-3"
      >
        <button
          className="flex-1 rounded-lg border border-gray-200 py-2 text-sm text-gray-600 hover:bg-gray-50"
          data-testid="delegate-cancel-button"
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="flex-1 rounded-lg bg-indigo-600 py-2 text-sm font-medium text-white hover:bg-indigo-700 disabled:opacity-50"
          data-testid="delegate-submit-button"
          disabled={false}
          type="submit"
        >
          Delegate
        </button>
      </div>
      <div
        className="mt-4 border-t border-gray-200 pt-4"
      >
        <p
          className="mb-2 text-xs text-gray-500"
        >
          Or delegate without paying gas
        </p>
        <button
          className="w-full rounded-lg bg-green-600 py-2 text-sm font-medium text-white hover:bg-green-700 disabled:opacity-50"
          data-testid="delegate-by-sig-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delegate without paying gas
        </button>
        <p
          className="mt-1 text-xs text-gray-400"
        >
          Sign off-chain, relayer submits transaction
        </p>
      </div>
    </form>
  </div>
</div>
`;
